# Learning

./: README.md
Linux/: 001_LinuxIntro  002_ls  003_cd  004_cat  005_io_redirection  006_mkdir  007_rm_rmdir  008_cp  009_mv  010_less  011_touch  012_nano  013_sudo  014_top  015_kill  016_echo  036_tar  037_grep  file.txt  file1.txt  files2.txt  hello.txt  test.tar  tets.txt
cpp/001_ casting/: 001_staticCast.cpp  002_constCast.cpp  003_dynamicCast.cpp  a.out  tempCodeRunnerFile.cpp
cpp/002_oops/: 001_virtual.cpp  003_copyConstructor.cpp  003_deepCopy.cpp  004_deletethis.cpp  test01
cpp/003_string/: a.out  cstring001.cpp  string001.cpp
cpp/006_smartpointers/: 000_autoptr.cpp  a.out
cpp/00_definitions/: 001 basic  002 array, string, pointer, reference.txt  cast  cpp_agenda  smart_pointer
cpp/02_sqlite/: tempCodeRunnerFile.cpp
cpp/05_cmake/: .gitignore  CMakeLists.txt  main.cpp
cpp/05_cmake/cmake_udm/cmake1/: CMakeLists.txt
cpp/05_cmake/cmake_udm/cmake7/math/: CMakeLists.txt
cpp/05_cmake/cmake_udm/cmake7/math/src/: addition.cpp
cpp/05_cmake/cmake_ytd/: CMakeLists.txt
cpp/06_boost/: test_boost.cpp
cpp/cmake/: main.cpp
cpp/email_notes/: 002_email.txt
cpp/sqlite/: sqlite001  sqlite001.cpp  test.db
cpp/test/: a.out  object_slicing  test002.cpp  test003.cpp  test004  test004.cpp  test005  test005.cpp  test006.cpp  test007  test007.cpp  test008  test008.cpp  test009  test009.cpp  test01.cpp
definitions/: 003 Function  004 oops.txt  Os  cicd  execpetion_handling  info  templates.txt
ds/: 005_vector  005_vector.cpp  LinkedList.cpp  main.cpp  nodes.h
ds/001_LinkedList/: DoublyLinkedList.cpp  DoublyLinkedList.h  LinkedList.cpp  LinkedList.h
ds/002_Stack/: Stack.cpp  Stack.h  StackSTL.h  StackUsingLinkedList.cpp  StackUsingLinkedList.h  StackUtil.cpp  StackUtil.h  TwoStack.cpp  TwoStack.h
ds/003_Queue/: CircularQueue.cpp  CircularQueue.h  LinkedQueue.cpp  LinkedQueue.h  Queue.cpp  Queue.h
ds/004_Tree/: 001_TreeIntro.cpp  003_AVL_Tree.cpp  004_RedBlackTree.cpp  BinarySearchTree.cpp  BinarySearchTree.h
ds/Sorting/: Sorting.cpp  Sorting.h
email_notes/: 001_email.txt  003_subjectLine.txt  004_greetingEndSign.txt  005_pleasantryIntro.txt  006_purpose.txt  007_details.txt
practice_gfg/: tempCodeRunnerFile.cpp
practice_gfg/001_Array/: 002_minmax.cpp  003_kthsmallest.cpp  004_sort.cpp  005_movNegative  008.2ndLargest  008_2ndLargest.cpp  009_maxSubArray.cpp  017_duplicate.cpp  a.out
practice_gfg/002_String/: 002_palindrome.cpp  007_rearrange  (+3 more)
(+248 files in other folders)
